--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
+<meta http-equiv="refresh" content="0; url=http://pewdizinho.github.io/PI1/" />
     <title>PewDizinho</title>
 </head>
 
