just comitting the assets

--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-<meta http-equiv="refresh" content="0; url=http://pewdizinho.github.io/PI1/" />
     <title>PewDizinho</title>
 </head>
 
 <body>
-    <header>
-        <h1>PewDizinho</h1>
-    </header>
+
+    <a href="https://Github.com/PewDizinho" class="logo" target="_blank">
+        <img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+    </a>
+
+    <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
+    <label for="menu-icon"></label>
+    <nav class="nav">
+        <ul class="pt-5">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">My Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+
 
 </body>
 
