--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <a href="https://Github.com/PewDizinho" class="logo" target="_blank">
-        <img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+        <img src="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png" alt="">
     </a>
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
@@ -25,6 +25,10 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+
+    
+
+
 
 
 
