--- a/index.html
+++ b/index.html
@@ -26,11 +26,61 @@
         </ul>
     </nav>
 
-    
+    <img id="leftMe" class="leftMe"
+        src="https://github.com/PewDizinho/PewDizinho.github.io/blob/main/assets/PauloEduard-1.png?raw=true" alt="">
+
+    <h1 class="nameTitle">Paulo Eduardo <br>Konopka</h1>
+    <div class="infoMeio">
+
+        <p class="bio">
 
 
 
 
+            Paulo é um entusiasta de programação desde jovem e atualmente está cursando Análise e Desenvolvimento de
+            Sistemas na Universidade UniOpet, em Curitiba. Com habilidades em diversas linguagens de programação como
+            JavaScript, NodeJS, Flutter/Dart, HTML e CSS. Sempre em busca de novos desafios e aprendizados, ele se
+            mantém atualizado com as tendências e
+            novidades do mercado de tecnologia. Paulo está comprometido em criar soluções eficientes e de alta
+            qualidade, utilizando suas habilidades em programação para desenvolver projetos que atendam às necessidades
+            de seus clientes e usuários. Ele também possui conhecimentos básicos em ferramentas como Photoshop, Blender
+            e Davince (Editor de vídeo), além de ter interesse em áreas como física, economia, história e
+            mitologias.
+            <br><br>
+            Paulo acredita que a tecnologia pode ser utilizada para melhorar a vida das pessoas e tem
+            como objetivo contribuir para um mundo mais conectado e eficiente. Com uma visão crítica e criativa, ele
+            busca entender as necessidades e desafios dos projetos para propor soluções inovadoras e eficazes. Paulo tem
+            experiência em trabalhar em equipe e se adaptar a diferentes ambientes de trabalho, sempre mantendo uma
+            comunicação clara e objetiva. Ele está sempre disposto a aprender e compartilhar conhecimentos com seus
+            colegas e clientes, acreditando que a colaboração é fundamental para alcançar resultados de qualidade.
+            <br><br>
+            “A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização de alguma
+            tarefa. Gosto de levar esse pensamento ao extremo enquanto programo: 'Quais tarefas o cliente precisa
+            realizar?' 'Que tipo de tecnologias podem ser usadas para facilitar essa tarefa?' 'Como deixar essa
+            ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?' São pontos que eu
+            mais
+            penso durante a criação de um sistema. Entendo que, como programadores, podemos ficar animados com uma nova
+            tecnologia, mas se não começarmos pensando pelo lado do cliente, a pessoa do dia a dia que realmente vai
+            usar essa ferramenta, não faremos nada realmente útil para a sociedade, nem todas as pessoas nascem com
+            conhecimento geral de tecnologia, e são essas as pessoas que precisamos pensar.”
+
+        </p>
+
+    </div>
+
+
+
+    <script>
+        window.onscroll = function () {
+            if (document.documentElement.scrollTop > 130) {
+                document.getElementById("leftMe").className = "slideUp";
+            } else {
+                document.getElementById("leftMe").className = "leftMe";
+            }
+
+        };
+
+    </script>
 
 </body>
 
