--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navBarStyle.css">
     <title>PewDizinho</title>
 </head>
 
@@ -19,10 +20,10 @@
     <label for="menu-icon"></label>
     <nav class="nav">
         <ul class="pt-5">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">My Work</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#">Sobre Mim</a></li>
+            <li><a href="#">Meu Trabalho</a></li>
+            <li><a href="./pages/contact/index.html">Contato</a></li>
         </ul>
     </nav>
 
@@ -32,11 +33,7 @@
     <h1 class="nameTitle">Paulo Eduardo <br>Konopka</h1>
     <div class="infoMeio">
 
-        <p class="bio">
-
-
-
-
+        <p class="bio" id="home">
             Paulo é um entusiasta de programação desde jovem e atualmente está cursando Análise e Desenvolvimento de
             Sistemas na Universidade UniOpet, em Curitiba. Com habilidades em diversas linguagens de programação como
             JavaScript, NodeJS, Flutter/Dart, HTML e CSS. Sempre em busca de novos desafios e aprendizados, ele se
@@ -67,6 +64,8 @@
         </p>
 
     </div>
+
+
 
 
 
