--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navBarStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>PewDizinho</title>
 </head>
 
@@ -70,14 +70,17 @@
 
 
     <script>
-        window.onscroll = function () {
-            if (document.documentElement.scrollTop > 130) {
-                document.getElementById("leftMe").className = "slideUp";
-            } else {
-                document.getElementById("leftMe").className = "leftMe";
-            }
+        if (!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))) {
 
-        };
+            window.onscroll = function () {
+                if (document.documentElement.scrollTop > 130) {
+                    document.getElementById("leftMe").className = "slideUp";
+                } else {
+                    document.getElementById("leftMe").className = "leftMe";
+                }
+
+            };
+        }
 
     </script>
 
