--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
@@ -18,6 +19,7 @@
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
     <label for="menu-icon"></label>
+
     <nav class="nav">
         <ul class="pt-5">
             <li><a href="./index.html">Home</a></li>
