--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png">
+    <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/PewRound.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
