--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/PewRound.png">
+    <link rel="icon" type="img/png"
+        href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/PewRound.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +14,7 @@
 
 <body>
 
-    <a href="https://Github.com/PewDizinho" class="logo" target="_blank">
+    <a href="./pages/PewDizinho/index.html" class="logo">
         <img src="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png" alt="">
     </a>
 
@@ -36,32 +37,31 @@
     <div class="infoMeio">
 
         <p class="bio" id="home">
-            Paulo é um entusiasta de programação desde jovem e atualmente está cursando Análise e Desenvolvimento de
-            Sistemas na Universidade UniOpet, em Curitiba. Com habilidades em diversas linguagens de programação como
-            JavaScript, NodeJS, Flutter/Dart, HTML e CSS. Sempre em busca de novos desafios e aprendizados, ele se
-            mantém atualizado com as tendências e
-            novidades do mercado de tecnologia. Paulo está comprometido em criar soluções eficientes e de alta
-            qualidade, utilizando suas habilidades em programação para desenvolver projetos que atendam às necessidades
-            de seus clientes e usuários. Ele também possui conhecimentos básicos em ferramentas como Photoshop, Blender
-            e Davince (Editor de vídeo), além de ter interesse em áreas como física, economia, história e
-            mitologias.
+
+
+
+            Paulo é autodidata e já dominava diversas áreas da programação antes de iniciar o curso de Análise e
+            Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
+            programação estão Javascript, Nodel, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências do
+            mercado de tecnologia e desenvolvimento de sistemas, possúi conhecimentos básicos de aporte como as
+            ferramentas do Photoshop, Blender e Davince. Dentre seus interesses pessoais estão as áreas da física,
+            economia, história e das narrativas mitológicas.
             <br><br>
-            Paulo acredita que a tecnologia pode ser utilizada para melhorar a vida das pessoas e tem
-            como objetivo contribuir para um mundo mais conectado e eficiente. Com uma visão crítica e criativa, ele
-            busca entender as necessidades e desafios dos projetos para propor soluções inovadoras e eficazes. Paulo tem
-            experiência em trabalhar em equipe e se adaptar a diferentes ambientes de trabalho, sempre mantendo uma
-            comunicação clara e objetiva. Ele está sempre disposto a aprender e compartilhar conhecimentos com seus
-            colegas e clientes, acreditando que a colaboração é fundamental para alcançar resultados de qualidade.
+            Desenvolver projetos inovadores perpassam pela importância da do trabalho em equipe. Compartilhar
+            conhecimentos é uma das suas softskills de destaque. Acreditar no espírito colaborativo de ponta a ponta,
+            dos clientes aos colaboradores é um diferencial para quem busca próatividade em um projeto focado em
+            soluções criativas.
             <br><br>
             “A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização de alguma
             tarefa. Gosto de levar esse pensamento ao extremo enquanto programo: 'Quais tarefas o cliente precisa
             realizar?' 'Que tipo de tecnologias podem ser usadas para facilitar essa tarefa?' 'Como deixar essa
-            ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?' São pontos que eu
-            mais
-            penso durante a criação de um sistema. Entendo que, como programadores, podemos ficar animados com uma nova
-            tecnologia, mas se não começarmos pensando pelo lado do cliente, a pessoa do dia a dia que realmente vai
-            usar essa ferramenta, não faremos nada realmente útil para a sociedade, nem todas as pessoas nascem com
+            ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?'São pontos que eu
+            mais penso durante a criação de um sistema. Entendo que, como programadores, podemos ficar animados com uma
+            nova tecnologia, mas se não começarmos pensando pelo lado do cliente, a pessoa do dia a dia que realmente
+            vai usar essa ferramenta, não faremos nada realmente útil para a sociedade. Nem todas as pessoas nascem com
             conhecimento geral de tecnologia, e são essas as pessoas que precisamos pensar.”
+
+
 
         </p>
 
