--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/PewRound.png">
     <link rel="stylesheet" href="../../navBarStyle.css">
     <link rel="stylesheet" href="style.css">
     <title>PewDizinho</title>
@@ -12,7 +13,7 @@
 
 <body>
 
-    <a href="https://Github.com/PewDizinho" class="logo" target="_blank">
+    <a href="../../pages/PewDizinho/index.html" class="logo">
         <img src="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png" alt="">
     </a>
 
