--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -32,6 +32,7 @@
     </nav>
 
     <h1 class="nameTitle text-center text-break">『Sobre Mim』</h1>
+    <h1 class="nameTitle subtitle text-center text-break">Lá vem textão...</h1>
 
     <div class="infoMeio container-v">
 
@@ -45,9 +46,10 @@
             <br>
             <br> O interesse de Paulo pela programação surgiu por causa de um jogo que ele jogava, o Minecraft. Esse
             jogo
-            possuía um servidor chamado NationCraft, onde Paulo jogava praticamente todos os dias. Eventualmente, ele se
-            tornou um administrador criativo dentro do servidor, ajudando na construção de novos servidores para a rede
-            NationCraft. Durante esse processo, ele descobriu uma ferramenta chamada "Script de CustomNPC", que
+            possuía uma rede de servidores chamada NationCraft, onde Paulo jogava praticamente todos os dias.
+            Eventualmente, ele se
+            tornou um administrador criativo dentro do servidor, ajudando na construção de novos servidores para a rede.
+            Durante esse processo, ele descobriu uma ferramenta chamada "Script de CustomNPC", que
             utilizava JavaScript e permitia a configuração de eventos e interações entre os NPCs (Personagens Não
             Jogáveis) do servidor, tornando-os mais personalizáveis.
             <br>
@@ -64,7 +66,8 @@
             <br>
             Devido aos problemas de direitos autorais em relação aos seus códigos e seguindo o conselho do proprietário
             da rede, Paulo decidiu começar a vender seus serviços. Cobrando valores acessíveis, entre 5 e 25 reais, por
-            cada código para o dono da Rede NationCraft. Eventualmente, Paulo decidiu levar essa atividade a sério e
+            cada código para o dono da Rede NationCraft.
+            <br> <br> Eventualmente, Paulo decidiu levar essa atividade a sério e
             criou a "Pew's Cavern", um servidor Discord onde as pessoas podiam ver seu trabalho e realizar compras.
             <br>
             Assim que a loja foi criada, em cerca de dois meses, proprietários de servidores no Brasil e até mesmo no
@@ -87,7 +90,101 @@
             crescimento em seu nível de proficiência em inglês foi uma consequência valiosa dessa participação ativa nos
             fóruns.
             <br>
-            Depois de realizar praticamente tudo que desejava 
+            <br>
+            Depois de realizar praticamente tudo o que desejava no mundo do Minecraft, Paulo decidiu deixar esse
+            universo para trás. No entanto, sua proficiência e curiosidade em relação à programação continuaram sendo
+            uma parte importante de sua vida. Ele expandiu seus conhecimentos explorando outras plataformas e projetos,
+            como a criação de bots para Discord, utilizando Node.js e packages como Jimp, MercadoPago, Chalk, Google
+            APIs, lowdb e Discord.js.
+            <br>
+            Ao mergulhar nesses novos desafios, Paulo demonstrou sua versatilidade e disposição em explorar diferentes
+            áreas da programação. A criação de bots para Discord permitiu que ele aplicasse suas habilidades em projetos
+            práticos, utilizando recursos como manipulação de imagens, integração com serviços de pagamento, formatação
+            de textos, acesso a APIs do Google e armazenamento de dados usando lowdb.
+            <br>
+            Através dessas experiências, Paulo continuou a expandir seu conhecimento e aprimorar suas habilidades de
+            programação, sempre buscando novos desafios e oportunidades de aprendizado. Sua paixão pela programação
+            continua sendo um pilar central em sua vida, impulsionando-o a explorar e criar em diferentes contextos e
+            plataformas.
+            <br>
+            <br>
+            Sendo uma dessas plataformas a programação mobile, Paulo teve acesso a uma conta na Udemy que continha um
+            curso completo de Flutter/Dart, oferecido por um conhecido da família. Como o autodidata que é, Paulo
+            assistiu
+            a cerca de 30 aulas e começou a explorar por conta própria, criando aplicativos simples no início e, com o
+            tempo, avançando para projetos mais complexos.
+            <br>
+            Um dos projetos em destaque foi o "SchoolApp", que ocupou grande parte do tempo de Paulo durante meses. No
+            entanto, o maior desafio que ele enfrentou nesse projeto acabou sendo um tanto cômico. No início, Paulo
+            tinha apenas uma noção básica de Flutter, mas sua curva de aprendizado aumentava rapidamente. Isso resultou
+            em uma situação peculiar: à medida que Paulo aprendia a desenvolver de forma mais eficiente, ele se deparava
+            com partes do código que já estavam obsoletas. Em outras palavras, ele começava a implementar algo e,
+            posteriormente, descobria uma abordagem melhor, o que o levava a passar semanas substituindo o sistema
+            antigo pelo novo. Como resultado, Paulo reiniciou o projeto cerca de três vezes ao longo desse processo.
+            <br>
+            No entanto, devido à conclusão de seus estudos no ensino médio e ao início de sua jornada na faculdade,
+            Paulo teve que deixar o projeto temporariamente de lado.
+            <br> <br>
+            Atualmente, Paulo está cursando sua educação superior no Centro Universitário UniOpet, onde está estudando
+            para se tornar um Tecnólogo em Análise e Desenvolvimento de Sistemas. Ele está focando seu tempo e
+            determinação no desenvolvimento web, especialmente em seu Projeto Integrador (PI) da faculdade.
+
+            Por meio desse projeto, Paulo teve seu primeiro contato com uma abordagem mais profissional para o
+            desenvolvimento de sites. Ele se viu enfrentando novos desafios e aprendendo sobre as práticas e técnicas
+            atualizadas nesse campo. Embora Paulo já possua um conhecimento relativamente avançado devido à sua
+            experiência prévia em programação, ele continua buscando novos desafios e oportunidades de aprendizado.
+
+            Dentro da faculdade, Paulo às vezes se sente um pouco perdido devido ao seu conhecimento prévio, que o
+            coloca em um nível relativamente acima do conteúdo passado em sala. No entanto, ele está sempre em
+            busca de novos desafios para continuar aprimorando suas habilidades. O site que você está acessando agora é
+            um exemplo disso. Paulo o criou com cerca de dois meses de experiência na criação de sites, buscando
+            expandir seus conhecimentos e enfrentar novos desafios nesse domínio específico.
+
+            A determinação de Paulo em se manter atualizado e explorar diferentes áreas da programação demonstra seu
+            comprometimento contínuo em aprimorar suas habilidades e enfrentar desafios cada vez mais complexos. Ele
+            está ansioso para aproveitar ao máximo sua educação superior e adquirir as habilidades necessárias para uma
+            carreira bem-sucedida no campo de análise e desenvolvimento de sistemas.
+            <br> <br>
+
+
+
+
+        <figure class="text-center">
+            <blockquote class="blockquote">
+                <p style="   font-size: clamp(0.02em, 2.5vw, 0.8em);">
+                    “Durante a criação desta página e ao escrever sobre minha história, sinto uma nostalgia profunda ao
+                    refletir
+                    sobre a jornada que percorri. Vejo como aquilo que começou como um simples hobby em um jogo quadrado
+                    se
+                    transformou em minha paixão e profissão. Não posso deixar de expressar minha gratidão a todos que me
+                    ajudaram a chegar até aqui e também a mim mesmo, por ter desenvolvido um interesse genuíno por uma
+                    área tão
+                    complexa.
+                    <br>
+                    Essa jornada despertou meu potencial e me permitiu contribuir de forma significativa para a
+                    sociedade como
+                    um todo. Estou verdadeiramente grato por ter encontrado uma área de atuação na qual posso utilizar
+                    minhas
+                    habilidades e conhecimentos para fazer a diferença. A cada desafio superado e conquista alcançada,
+                    sinto uma
+                    satisfação imensa por ter seguido meu caminho na programação e ter encontrado uma paixão que
+                    transcendeu os
+                    limites do que eu poderia imaginar.
+                    <br>
+                    Seguindo em frente, comprometo-me a continuar explorando meu potencial, a buscar novos desafios e a
+                    utilizar
+                    minha paixão e habilidades para contribuir positivamente para a sociedade. Estou empolgado com o que
+                    o
+                    futuro reserva e ansioso para ver como minha jornada na programação continuará a evoluir e impactar
+                    aqueles
+                    ao meu redor.”
+                </p>
+            </blockquote>
+            <br>
+            <figcaption class="blockquote-footer">
+                Paulo Eduardo Konopka, <cite title="Source Title">2023</cite>
+            </figcaption>
+        </figure>
 
         </p>
     </div>
