--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             Paulo é autodidata e já dominava diversas áreas da programação antes de iniciar o curso de Análise e
             Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
-            programação estão Javascript, Nodel, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências do
+            programação estão Javascript, NodeJs, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências do
             mercado de tecnologia e desenvolvimento de sistemas, possúi conhecimentos básicos de aporte como as
             ferramentas do Photoshop, Blender e Davince. Dentre seus interesses pessoais estão as áreas da física,
             economia, história e das narrativas mitológicas.
