--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
             programação estão Javascript, NodeJs, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências do
             mercado de tecnologia e desenvolvimento de sistemas, possúi conhecimentos básicos de aporte como as
-            ferramentas do Photoshop, Blender e Davince. Dentre seus interesses pessoais estão as áreas da física,
+            ferramentas do Photoshop, Blender e DaVince. Dentre seus interesses pessoais estão as áreas da física,
             economia, história e das narrativas mitológicas.
             <br><br>
             Desenvolver projetos inovadores perpassam pela importância da do trabalho em equipe. Compartilhar
