--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             ferramentas do Photoshop, Blender e DaVince. Dentre seus interesses pessoais estão as áreas da física,
             economia, história e das narrativas mitológicas.
             <br><br>
-            Desenvolver projetos inovadores perpassam pela importância da do trabalho em equipe. Compartilhar
+            Desenvolver projetos inovadores perpassam pela importância do trabalho em equipe. Compartilhar
             conhecimentos é uma das suas softskills de destaque. Acreditar no espírito colaborativo de ponta a ponta,
             dos clientes aos colaboradores é um diferencial para quem busca próatividade em um projeto focado em
             soluções criativas.
@@ -55,7 +55,7 @@
             “A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização de alguma
             tarefa. Gosto de levar esse pensamento ao extremo enquanto programo: 'Quais tarefas o cliente precisa
             realizar?' 'Que tipo de tecnologias podem ser usadas para facilitar essa tarefa?' 'Como deixar essa
-            ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?'São pontos que eu
+            ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?' São pontos que eu
             mais penso durante a criação de um sistema. Entendo que, como programadores, podemos ficar animados com uma
             nova tecnologia, mas se não começarmos pensando pelo lado do cliente, a pessoa do dia a dia que realmente
             vai usar essa ferramenta, não faremos nada realmente útil para a sociedade. Nem todas as pessoas nascem com
