mobile on aboutme

--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -149,9 +149,7 @@
 
 
 
-        <figure class="text-center">
-            <blockquote class="blockquote">
-                <p style="   font-size: clamp(0.02em, 2.5vw, 0.8em);">
+                <p class="quote">
                     “Durante a criação desta página e ao escrever sobre minha história, sinto uma nostalgia profunda ao
                     refletir
                     sobre a jornada que percorri. Vejo como aquilo que começou como um simples hobby em um jogo quadrado
@@ -179,12 +177,12 @@
                     aqueles
                     ao meu redor.”
                 </p>
-            </blockquote>
+
             <br>
-            <figcaption class="blockquote-footer">
+            <figcaption class="blockquote-footer text-center">
                 Paulo Eduardo Konopka, <cite title="Source Title">2023</cite>
             </figcaption>
-        </figure>
+    
 
         </p>
     </div>
