--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="img/png"
-        href="./assets/PewRound.png">
+    <link rel="icon" type="img/png" href="./assets/PewRound.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
-    <title>PewDizinho</title>
+       <title>PewDizinho (BETA)</title>
+
 </head>
 
 <body>
+
+
 
     <a href="./pages/PewDizinho/index.html" class="logo">
         <img src="./assets/Pew.png" alt="">
@@ -30,8 +32,7 @@
         </ul>
     </nav>
 
-    <img id="leftMe" class="img-fluid img-thumbnail leftMe"
-        src="./assets/PauloEduard-1.png" alt="">
+    <img id="leftMe" class="img-fluid img-thumbnail leftMe" src="./assets/PauloEduard-1.png" alt="">
 
     <h1 class="nameTitle">Paulo Eduardo <br>Konopka</h1>
     <div class="infoMeio">
@@ -42,7 +43,8 @@
 
             Paulo é autodidata e já dominava diversas áreas da programação antes de iniciar o curso de Análise e
             Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
-            programação estão Javascript, NodeJs, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências do
+            programação estão Javascript, NodeJs, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências
+            do
             mercado de tecnologia e desenvolvimento de sistemas, possúi conhecimentos básicos de aporte como as
             ferramentas do Photoshop, Blender e DaVince. Dentre seus interesses pessoais estão as áreas da física,
             economia, história e das narrativas mitológicas.
@@ -86,6 +88,8 @@
 
     </script>
 
-</body>
+
+
+
 
 </html>
