--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="img/png" href="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/PewRound.png">
     <link rel="stylesheet" href="../../navBarStyle.css">
     <link rel="stylesheet" href="style.css">
-    <title>PewDizinho</title>
+       <title>PewDizinho (BETA)</title>
 </head>
 
 <body>
