--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
-       <title>PewDizinho (BETA)</title>
+    <title>PewDizinho (BETA)</title>
 
 </head>
 
@@ -37,7 +37,7 @@
     <h1 class="nameTitle">Paulo Eduardo <br>Konopka</h1>
     <div class="infoMeio">
 
-        <p class="bio text-break" id="home">
+        <p class="text-center" id="home">
 
 
 
