--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="pt-5">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./pages/aboutme/index.html">Sobre Mim</a></li>
-            <li><a href="#">Meu Trabalho</a></li>
+            <li><a href="./pages/myjobs/index.html">Meu Trabalho</a></li>
             <li><a href="./pages/contact/index.html">Contato</a></li>
         </ul>
     </nav>
