--- a/pages/myjobs/jobInfo.html
+++ b/pages/myjobs/jobInfo.html
@@ -32,7 +32,9 @@
     </nav>
 
     <h1 class="nameTitle text-center text-break">『Meus Trabalhos』</h1>
-
+    <p id="title"></p>
+    <p id="description"></p>
+    <img src="" alt="" id="image">
     <script>
         // Retrieve the URL parameters
         var urlParams = new URLSearchParams(window.location.search);
