--- a/pages/PewDizinho/index.html
+++ b/pages/PewDizinho/index.html
@@ -27,8 +27,8 @@
     <nav class="nav">
         <ul class="pt-5">
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="#">Sobre Mim</a></li>
-            <li><a href="#">Meu Trabalho</a></li>
+            <li><a href="../../pages/aboutme/index.html">Sobre Mim</a></li>
+            <li><a href="../../pages/myjobs/index.html">Meu Trabalho</a></li>
             <li><a href="../../pages/contact/index.html">Contato</a></li>
         </ul>
     </nav>
