--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -22,9 +22,9 @@
     <nav class="nav">
         <ul class="pt-5">
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="#">Sobre Mim</a></li>
-            <li><a href="#">Meu Trabalho</a></li>
-            <li><a href="./index.html">Contato</a></li>
+            <li><a href="../../pages/aboutme/index.html">Sobre Mim</a></li>
+            <li><a href="../../pages/myjobs/index.html">Meu Trabalho</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </nav>
     <h1 class="nameTitle">『Contato』</h1>
