--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-    <a href="./pages/PewDizinho/index.html" class="logo">
+    <a href="#" class="logo">
         <img src="./assets/Pew.png" alt="">
     </a>
 
