--- a/pages/myjobs/jobInfo.html
+++ b/pages/myjobs/jobInfo.html
@@ -33,7 +33,7 @@
     </nav>
 
     <h1 class="nameTitle text-center text-break" id="title"></h1>
-    <div class="center align-middle text-center">
+    <div class="center column mb align-middle text-center">
 
         <img src="" alt="" id="image">
         <div class="row center">
@@ -45,8 +45,9 @@
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-center column">
 
-        <button onclick="location.href='https://pewdizinho.github.io/pages/myjobs/index.html'" type="button" class="btn btn-outline-secondary btn-lg">◀︎ Voltar</button>
         <button id="seemore" type="button" class="btn btn-outline-primary btn-lg">🔗Veja mais</button>
+        <button onclick="location.href='https://pewdizinho.github.io/pages/myjobs/index.html'" type="button"
+        class="btn btn-outline-secondary btn-lg">◀︎ Voltar</button>
     </div>
     <script>
         // Retrieve the URL parameters
