title beta removed

--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../navBarStyle.css">
     <link rel="stylesheet" href="./style.css">
-       <title>PewDizinho (BETA)</title>
+       <title>PewDizinho</title>
 </head>
 
 <body>
