--- a/pages/myjobs/jobInfo.html
+++ b/pages/myjobs/jobInfo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../navBarStyle.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styleInfo.css">
-    <title>PewDizinho (BETA)</title>
+    <title>PewDizinho</title>
 </head>
 
 <body>
