I thought I alredy hadremoverd that

--- a/pages/myjobs/jobInfo.html
+++ b/pages/myjobs/jobInfo.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <a href="../../pages/PewDizinho/index.html" class="logo">
+    <a href="#" class="logo">
         <img src="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png" alt="">
     </a>
 
