--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <a href="#" class="logo">
+    <a href="../../index.html" class="logo">
         <img src="https://raw.githubusercontent.com/PewDizinho/PewDizinho.github.io/main/assets/Pew.png" alt="">
     </a>
 
