--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
             programação estão Javascript, NodeJs, Flutter/Dart,HTML e CSS. Além de se manter atualizado nas tendências
             do
-            mercado de tecnologia e desenvolvimento de sistemas, possúi conhecimentos básicos de aporte como as
+            mercado de tecnologia e desenvolvimento de sistemas, possui conhecimentos básicos de aporte como as
             ferramentas do Photoshop, Blender e DaVince. Dentre seus interesses pessoais estão as áreas da física,
             economia, história e das narrativas mitológicas.
             <br><br>
             Desenvolver projetos inovadores perpassam pela importância do trabalho em equipe. Compartilhar
             conhecimentos é uma das suas softskills de destaque. Acreditar no espírito colaborativo de ponta a ponta,
-            dos clientes aos colaboradores é um diferencial para quem busca próatividade em um projeto focado em
+            dos clientes aos colaboradores é um diferencial para quem busca proatividade em um projeto focado em
             soluções criativas.
             <br><br>
             “A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização de alguma
