--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../navBarStyle.css">
     <link rel="stylesheet" href="./style.css">
-       <title>PewDizinho</title>
+    <title>PewDizinho</title>
 </head>
 
 <body>
@@ -90,6 +90,15 @@
             crescimento em seu nível de proficiência em inglês foi uma consequência valiosa dessa participação ativa nos
             fóruns.
             <br>
+            Em 03/12/2021, devido à reputação de Paulo no fórum e na comunidade de desenvolvedores, ele recebeu um
+            convite para participar de um projeto chamado CustomNPC+. Esse projeto era uma continuação oficial do mod
+            CustomNPC na versão 1.7.10, que havia sido abandonado, e estava sendo desenvolvido por Kam, um talentoso
+            programador de software dos Estados Unidos. Até o momento da redação deste artigo, o CustomNPC+ acumulou
+            mais de 400.000 downloads. Embora Paulo se orgulhe imensamente de ter feito parte desse projeto, ele sente
+            um certo pesar por não ter conseguido contribuir tanto na parte de programação, já que ainda não tinha total
+            familiaridade com a linguagem Java naquela época. No entanto, ele sempre se esforçava para auxiliar com sua
+            experiência no mod e seu conhecimento em administração de servidores no Discord.
+            <br>
             <br>
             Depois de realizar praticamente tudo o que desejava no mundo do Minecraft, Paulo decidiu deixar esse
             universo para trás. No entanto, sua proficiência e curiosidade em relação à programação continuaram sendo
@@ -143,46 +152,46 @@
             A determinação de Paulo em se manter atualizado e explorar diferentes áreas da programação demonstra seu
             comprometimento contínuo em aprimorar suas habilidades e enfrentar desafios cada vez mais complexos. Ele
             está ansioso para aproveitar ao máximo sua educação superior e adquirir as habilidades necessárias para uma
-            carreira bem-sucedida no campo de análise e desenvolvimento de sistemas.
+            carreira bem-sucedida no campo de Análise e Desenvolvimento de Sistemas.
             <br> <br>
 
 
 
 
-                <p class="quote">
-                    “Durante a criação desta página e ao escrever sobre minha história, sinto uma nostalgia profunda ao
-                    refletir
-                    sobre a jornada que percorri. Vejo como aquilo que começou como um simples hobby em um jogo quadrado
-                    se
-                    transformou em minha paixão e profissão. Não posso deixar de expressar minha gratidão a todos que me
-                    ajudaram a chegar até aqui e também a mim mesmo, por ter desenvolvido um interesse genuíno por uma
-                    área tão
-                    complexa.
-                    <br>
-                    Essa jornada despertou meu potencial e me permitiu contribuir de forma significativa para a
-                    sociedade como
-                    um todo. Estou verdadeiramente grato por ter encontrado uma área de atuação na qual posso utilizar
-                    minhas
-                    habilidades e conhecimentos para fazer a diferença. A cada desafio superado e conquista alcançada,
-                    sinto uma
-                    satisfação imensa por ter seguido meu caminho na programação e ter encontrado uma paixão que
-                    transcendeu os
-                    limites do que eu poderia imaginar.
-                    <br>
-                    Seguindo em frente, comprometo-me a continuar explorando meu potencial, a buscar novos desafios e a
-                    utilizar
-                    minha paixão e habilidades para contribuir positivamente para a sociedade. Estou empolgado com o que
-                    o
-                    futuro reserva e ansioso para ver como minha jornada na programação continuará a evoluir e impactar
-                    aqueles
-                    ao meu redor.”
-                </p>
-
+        <p class="quote">
+            “Durante a criação desta página e ao escrever sobre minha história, sinto uma nostalgia profunda ao
+            refletir
+            sobre a jornada que percorri. Vejo como aquilo que começou como um simples hobby em um jogo quadrado
+            se
+            transformou em minha paixão e profissão. Não posso deixar de expressar minha gratidão a todos que me
+            ajudaram a chegar até aqui e também a mim mesmo, por ter desenvolvido um interesse genuíno por uma
+            área tão
+            complexa.
             <br>
-            <figcaption class="blockquote-footer text-center">
-                Paulo Eduardo Konopka, <cite title="Source Title">2023</cite>
-            </figcaption>
-    
+            Essa jornada despertou meu potencial e me permitiu contribuir de forma significativa para a
+            sociedade como
+            um todo. Estou verdadeiramente grato por ter encontrado uma área de atuação na qual posso utilizar
+            minhas
+            habilidades e conhecimentos para fazer a diferença. A cada desafio superado e conquista alcançada,
+            sinto uma
+            satisfação imensa por ter seguido meu caminho na programação e ter encontrado uma paixão que
+            transcendeu os
+            limites do que eu poderia imaginar.
+            <br>
+            Seguindo em frente, comprometo-me a continuar explorando meu potencial, a buscar novos desafios e a
+            utilizar
+            minha paixão e habilidades para contribuir positivamente para a sociedade. Estou empolgado com o que
+            o
+            futuro reserva e ansioso para ver como minha jornada na programação continuará a evoluir e impactar
+            aqueles
+            ao meu redor.”
+        </p>
+
+        <br>
+        <figcaption class="blockquote-footer text-center">
+            Paulo Eduardo Konopka, <cite title="Source Title">2023</cite>
+        </figcaption>
+
 
         </p>
     </div>
