--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -92,8 +92,8 @@
             <br>
             Em 03/12/2021, devido à reputação de Paulo no fórum e na comunidade de desenvolvedores, ele recebeu um
             convite para participar de um projeto chamado CustomNPC+. Esse projeto era uma continuação oficial do mod
-            CustomNPC na versão 1.7.10, que havia sido abandonado, e estava sendo desenvolvido por Kam, um talentoso
-            programador de software dos Estados Unidos. Até o momento da redação deste artigo, o CustomNPC+ acumulou
+            CustomNPC na versão 1.7.10, que havia sido abandonado, e estava sendo desenvolvido por Kam e Louis, ambos
+            programadores de software dos Estados Unidos. Até o momento da redação deste artigo, o CustomNPC+ acumulou
             mais de 400.000 downloads. Embora Paulo se orgulhe imensamente de ter feito parte desse projeto, ele sente
             um certo pesar por não ter conseguido contribuir tanto na parte de programação, já que ainda não tinha total
             familiaridade com a linguagem Java naquela época. No entanto, ele sempre se esforçava para auxiliar com sua
