--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navBarStyle.css">
     <link rel="stylesheet" href="style.css">
-    <title>PewDizinho</title>
+    <title>Paolo</title>
 
 </head>
 
